# BlindMarkerMaster

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  release.sh  tailwind.config.js  vite.config.ts  使用指南.md
.github/workflows/: build-windows.yml  ci.yml  dev-build.yml  release.yml
docs/: index.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: archive.rs  excel.rs  mod.rs  watermark.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/compression/: 7z_handler.rs  common.rs  mod.rs  zip_handler.rs
src-tauri/src/core/file_ops/: mod.rs  scanner.rs  temp_manager.rs
src-tauri/src/core/watermark/: dct.rs  dwt.rs  embedder.rs  encoder.rs  extractor.rs  json_marker.rs  mod.rs
src-tauri/src/models/: config.rs  error.rs  mod.rs  task.rs
src-tauri/src/utils/: mod.rs  parallel.rs  progress.rs
src/lib/: types.ts
